// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/office-groups.vue menu button should be rendered when session auth is system admin 1`] = `
<z-menu-button-stub
  data-menu-button=""
  datamenubutton=""
>
  <z-menu-button-item-stub
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    to="/office-groups/new?parentOfficeGroupId=10"
  >
    <span>
      サブグループを追加
    </span>
  </z-menu-button-item-stub>
  <z-menu-button-item-stub
    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
    to=""
  >
    <span>
      事業所グループを削除
    </span>
  </z-menu-button-item-stub>
</z-menu-button-stub>
`;

exports[`pages/office-groups.vue menu button should be rendered when the staff has permission(s): [ 'office-groups/create' ] 1`] = `
<z-menu-button-stub
  data-menu-button=""
  datamenubutton=""
>
  <z-menu-button-item-stub
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    to="/office-groups/new?parentOfficeGroupId=10"
  >
    <span>
      サブグループを追加
    </span>
  </z-menu-button-item-stub>
  <!---->
</z-menu-button-stub>
`;

exports[`pages/office-groups.vue menu button should be rendered when the staff has permission(s): [ 'office-groups/create', 'office-groups/delete' ] 1`] = `
<z-menu-button-stub
  data-menu-button=""
  datamenubutton=""
>
  <z-menu-button-item-stub
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    to="/office-groups/new?parentOfficeGroupId=10"
  >
    <span>
      サブグループを追加
    </span>
  </z-menu-button-item-stub>
  <z-menu-button-item-stub
    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
    to=""
  >
    <span>
      事業所グループを削除
    </span>
  </z-menu-button-item-stub>
</z-menu-button-stub>
`;

exports[`pages/office-groups.vue menu button should be rendered when the staff has permission(s): [ 'office-groups/delete' ] 1`] = `
<z-menu-button-stub
  data-menu-button=""
  datamenubutton=""
>
  <!---->
  <z-menu-button-item-stub
    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
    to=""
  >
    <span>
      事業所グループを削除
    </span>
  </z-menu-button-item-stub>
</z-menu-button-stub>
`;

exports[`pages/office-groups.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object]"
  class="z-page-stub"
  data-page-office-groups=""
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <v-card-stub
    class="pb-4 pt-2"
    loaderheight="4"
    tag="div"
  >
    <div
      class="header"
    >
      <div
        class="headerItem headerName"
      >
        事業所グループ名
      </div>
      <div
        class="headerItem headerActions"
      >
        <span>
          操作
        </span>
        <div
          bottom=""
          class="v-tooltip-stub"
        >
          <div
            class="v-tooltip-stub-slot-activator"
          />
          <span>
            ドラッグ＆ドロップで並び替えができます。
          </span>
        </div>
      </div>
    </div>
    <v-divider-stub />
    <div
      class="text-body-2 root"
      data-sortable-tree=""
    >
      <div
        class="v-treeview v-treeview--dense theme--light v-treeview--hoverable"
      >
        <draggable-stub
          animation="0"
          class="sortable-root-items root dragEnabled"
          clone="function () { [native code] }"
          data-draggable=""
          data-sortable-tree-items=""
          drag-class=".sortable-tree-drag"
          draggable=".v-treeview-node"
          group="sortable-tree-root"
          value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        >
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root"
            >
              <v-icon-stub
                class="v-treeview-node__toggle"
              >
        M7,10L12,15L17,10H7Z
              </v-icon-stub>
              <div
                class="v-treeview-node__content"
              >
                <v-icon-stub>
                  M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
                </v-icon-stub>
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    北海道ブロック
                  </span>
                </div>
                <span>
                </span>
                <a
                  class="v-btn-stub"
                  data-edit-btn=""
                  icon=""
                  nuxt=""
                  ripple=""
                  small=""
                  to="/office-groups/10/edit"
                >
                  <v-icon-stub>
                    M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
                  </v-icon-stub>
                </a>
                <z-menu-button-stub
                  data-menu-button=""
                  datamenubutton=""
                >
                  <z-menu-button-item-stub
                    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                    to="/office-groups/new?parentOfficeGroupId=10"
                  >
                    <span>
                      サブグループを追加
                    </span>
                  </z-menu-button-item-stub>
                  <z-menu-button-item-stub
                    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                    to=""
                  >
                    <span>
                      事業所グループを削除
                    </span>
                  </z-menu-button-item-stub>
                </z-menu-button-stub>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root"
            >
              <v-icon-stub
                class="v-treeview-node__toggle"
              >
        M7,10L12,15L17,10H7Z
              </v-icon-stub>
              <div
                class="v-treeview-node__content"
              >
                <v-icon-stub>
                  M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
                </v-icon-stub>
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    東北ブロック
                  </span>
                </div>
                <span>
                </span>
                <a
                  class="v-btn-stub"
                  data-edit-btn=""
                  icon=""
                  nuxt=""
                  ripple=""
                  small=""
                  to="/office-groups/20/edit"
                >
                  <v-icon-stub>
                    M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
                  </v-icon-stub>
                </a>
                <z-menu-button-stub
                  data-menu-button=""
                  datamenubutton=""
                >
                  <z-menu-button-item-stub
                    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                    to="/office-groups/new?parentOfficeGroupId=20"
                  >
                    <span>
                      サブグループを追加
                    </span>
                  </z-menu-button-item-stub>
                  <z-menu-button-item-stub
                    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                    to=""
                  >
                    <span>
                      事業所グループを削除
                    </span>
                  </z-menu-button-item-stub>
                </z-menu-button-stub>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root"
            >
              <v-icon-stub
                class="v-treeview-node__toggle"
              >
        M7,10L12,15L17,10H7Z
              </v-icon-stub>
              <div
                class="v-treeview-node__content"
              >
                <v-icon-stub>
                  M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
                </v-icon-stub>
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    関東ブロック
                  </span>
                </div>
                <span>
                </span>
                <a
                  class="v-btn-stub"
                  data-edit-btn=""
                  icon=""
                  nuxt=""
                  ripple=""
                  small=""
                  to="/office-groups/30/edit"
                >
                  <v-icon-stub>
                    M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
                  </v-icon-stub>
                </a>
                <z-menu-button-stub
                  data-menu-button=""
                  datamenubutton=""
                >
                  <z-menu-button-item-stub
                    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                    to="/office-groups/new?parentOfficeGroupId=30"
                  >
                    <span>
                      サブグループを追加
                    </span>
                  </z-menu-button-item-stub>
                  <z-menu-button-item-stub
                    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                    to=""
                  >
                    <span>
                      事業所グループを削除
                    </span>
                  </z-menu-button-item-stub>
                </z-menu-button-stub>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root"
            >
              <v-icon-stub
                class="v-treeview-node__toggle"
              >
        M7,10L12,15L17,10H7Z
              </v-icon-stub>
              <div
                class="v-treeview-node__content"
              >
                <v-icon-stub>
                  M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
                </v-icon-stub>
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    甲信越ブロック
                  </span>
                </div>
                <span>
                </span>
                <a
                  class="v-btn-stub"
                  data-edit-btn=""
                  icon=""
                  nuxt=""
                  ripple=""
                  small=""
                  to="/office-groups/40/edit"
                >
                  <v-icon-stub>
                    M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
                  </v-icon-stub>
                </a>
                <z-menu-button-stub
                  data-menu-button=""
                  datamenubutton=""
                >
                  <z-menu-button-item-stub
                    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                    to="/office-groups/new?parentOfficeGroupId=40"
                  >
                    <span>
                      サブグループを追加
                    </span>
                  </z-menu-button-item-stub>
                  <z-menu-button-item-stub
                    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                    to=""
                  >
                    <span>
                      事業所グループを削除
                    </span>
                  </z-menu-button-item-stub>
                </z-menu-button-stub>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root"
            >
              <v-icon-stub
                class="v-treeview-node__toggle"
              >
        M7,10L12,15L17,10H7Z
              </v-icon-stub>
              <div
                class="v-treeview-node__content"
              >
                <v-icon-stub>
                  M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
                </v-icon-stub>
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    中部ブロック
                  </span>
                </div>
                <span>
                </span>
                <a
                  class="v-btn-stub"
                  data-edit-btn=""
                  icon=""
                  nuxt=""
                  ripple=""
                  small=""
                  to="/office-groups/50/edit"
                >
                  <v-icon-stub>
                    M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
                  </v-icon-stub>
                </a>
                <z-menu-button-stub
                  data-menu-button=""
                  datamenubutton=""
                >
                  <z-menu-button-item-stub
                    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                    to="/office-groups/new?parentOfficeGroupId=50"
                  >
                    <span>
                      サブグループを追加
                    </span>
                  </z-menu-button-item-stub>
                  <z-menu-button-item-stub
                    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                    to=""
                  >
                    <span>
                      事業所グループを削除
                    </span>
                  </z-menu-button-item-stub>
                </z-menu-button-stub>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root"
            >
              <v-icon-stub
                class="v-treeview-node__toggle"
              >
        M7,10L12,15L17,10H7Z
              </v-icon-stub>
              <div
                class="v-treeview-node__content"
              >
                <v-icon-stub>
                  M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
                </v-icon-stub>
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    関西ブロック
                  </span>
                </div>
                <span>
                </span>
                <a
                  class="v-btn-stub"
                  data-edit-btn=""
                  icon=""
                  nuxt=""
                  ripple=""
                  small=""
                  to="/office-groups/60/edit"
                >
                  <v-icon-stub>
                    M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
                  </v-icon-stub>
                </a>
                <z-menu-button-stub
                  data-menu-button=""
                  datamenubutton=""
                >
                  <z-menu-button-item-stub
                    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                    to="/office-groups/new?parentOfficeGroupId=60"
                  >
                    <span>
                      サブグループを追加
                    </span>
                  </z-menu-button-item-stub>
                  <z-menu-button-item-stub
                    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                    to=""
                  >
                    <span>
                      事業所グループを削除
                    </span>
                  </z-menu-button-item-stub>
                </z-menu-button-stub>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root"
            >
              <v-icon-stub
                class="v-treeview-node__toggle"
              >
        M7,10L12,15L17,10H7Z
              </v-icon-stub>
              <div
                class="v-treeview-node__content"
              >
                <v-icon-stub>
                  M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
                </v-icon-stub>
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    中四国ブロック
                  </span>
                </div>
                <span>
                </span>
                <a
                  class="v-btn-stub"
                  data-edit-btn=""
                  icon=""
                  nuxt=""
                  ripple=""
                  small=""
                  to="/office-groups/70/edit"
                >
                  <v-icon-stub>
                    M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
                  </v-icon-stub>
                </a>
                <z-menu-button-stub
                  data-menu-button=""
                  datamenubutton=""
                >
                  <z-menu-button-item-stub
                    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                    to="/office-groups/new?parentOfficeGroupId=70"
                  >
                    <span>
                      サブグループを追加
                    </span>
                  </z-menu-button-item-stub>
                  <z-menu-button-item-stub
                    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                    to=""
                  >
                    <span>
                      事業所グループを削除
                    </span>
                  </z-menu-button-item-stub>
                </z-menu-button-stub>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root"
            >
              <v-icon-stub
                class="v-treeview-node__toggle"
              >
        M7,10L12,15L17,10H7Z
              </v-icon-stub>
              <div
                class="v-treeview-node__content"
              >
                <v-icon-stub>
                  M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
                </v-icon-stub>
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    九州ブロック
                  </span>
                </div>
                <span>
                </span>
                <a
                  class="v-btn-stub"
                  data-edit-btn=""
                  icon=""
                  nuxt=""
                  ripple=""
                  small=""
                  to="/office-groups/80/edit"
                >
                  <v-icon-stub>
                    M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
                  </v-icon-stub>
                </a>
                <z-menu-button-stub
                  data-menu-button=""
                  datamenubutton=""
                >
                  <z-menu-button-item-stub
                    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                    to="/office-groups/new?parentOfficeGroupId=80"
                  >
                    <span>
                      サブグループを追加
                    </span>
                  </z-menu-button-item-stub>
                  <z-menu-button-item-stub
                    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                    to=""
                  >
                    <span>
                      事業所グループを削除
                    </span>
                  </z-menu-button-item-stub>
                </z-menu-button-stub>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
        </draggable-stub>
      </div>
    </div>
    <a
      bottom=""
      class="z-fab-stub"
      data-fab=""
      fixed=""
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      nuxt=""
      right=""
      to="/office-groups/new"
    />
  </v-card-stub>
  <nuxt-child-stub />
</div>
`;
